<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeatherForecastActivity" android:background="@color/purple_700">

    <Button
            android:text="@string/min_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/min_button"
            android:onClick="clickTemp"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginTop="50dp"/>
    <Button
            android:text="@string/max_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/max_button"
            android:onClick="clickTemp"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="150dp" android:layout_marginStart="50dp"/>
    <Button
            android:text="@string/avg_daily_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/average_daily_button"
            android:onClick="clickTemp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="250dp" android:layout_marginStart="50dp"
            app:backgroundTint="@color/purple_500"/>
    <Button
            android:text="@string/all_cities"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/all_cities_button"
            android:onClick="clickTemp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="350dp" android:layout_marginStart="50dp"
            app:backgroundTint="@color/purple_500"/>
</androidx.constraintlayout.widget.ConstraintLayout>